--- a/Checking our implementation of MoM-based regression with the one provided by Lecué and Lerasle.ipynb
+++ b/Checking our implementation of MoM-based regression with the one provided by Lecué and Lerasle.ipynb
@@ -4,10 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparison with Lecué and Lerasle implementation\n",
+    "# Checking our implementation of MoM-based regression with the one provided by Lecué and Lerasle\n",
     "\n",
     "The goal of this notebook is to compare our algorithm with the one provided by Lecué and Lerasle (LL) in their implementation of the Median of Means (avaliable at https://github.com/lecueguillaume/MOMpower). This is a simple check to see if our code and theirs present the same behavior.\n",
-    "\n",
     "We start importing a few libraries and functions."
    ]
   },
